# postgres-fastapi

./: .gitignore  Dockerfile  Dockerfile.celery  README.md  celery.Dockerfile  docker-compose.yaml  init.sql  jwt-private.pem  jwt-public.pem  pyproject.toml  pytest.ini  requirements.txt
src/: app.py  config.py  depends.py  exceptions.py  exeptions.py  task.py
src/db/: database.py  models.py
src/logs/: log_config.json
src/migrations/: env.py
src/repositories/: rep_main.py  repository.py
src/routing/: auth.py  chats.py  groups.py  main.py  messages.py  user_group_association.py  users.py
src/schemas/: chats.py  groups.py  main.py  messages.py  user_group_association.py  users.py
src/services/: broker.py  chats.py  groups.py  jwt_services.py  main.py  messages.py  services_main.py  user_group_association.py  users.py
src/static/js/: auth.js  chat.js
src/static/styles/: auth.css  chat.css
src/templates/: auth.html  base.html  chat.html
src/worker/: tasks.py
tests/: conftest.py  test_api.py
tests/unit/: test_api.py
worker/: selery_app.py  tasks.py
